test/expected/dynamic_cast_i.out
dynamic cast x into int
                    ^
21: error: dynamic_cast type must be a pointer or reference to a class, struct, or union
